kubernetes/internal-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-app
  namespace: mobileapp
  labels:
    app: internal-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: internal-app
  template:
    metadata:
      labels:
        app: internal-app
    spec:
      containers:
        - name: internal-app
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
      volumes:
        - name: nginx-conf
          configMap:
            name: internal-app-config
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: html
          configMap:
            name: internal-app-config
            items:
              - key: index.html
                path: index.html

---
apiVersion: v1
kind: Service
metadata:
  name: internal-app-svc
  namespace: mobileapp
  labels:
    app: internal-app
spec:
  selector:
    app: internal-app
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-app-ingress
  namespace: mobileapp
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: k8s-mobileap-internal-63a6eb7efe
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /app-version/check
            pathType: Prefix
            backend:
              service:
                name: internal-app-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: internal-app-svc
                port:
                  number: 80
